--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,8 @@ version = "0.1.0"
 google-drive3 = "*"
 hyper = "^0.10"
 hyper-rustls = "^0.6"
-inotify = "*"
-notify = "*"
+notify = "4.0.15"
 serde = "^1.0"
 serde_json = "^1.0"
 tempfile = "3.1.0"
 yup-oauth2 = "^1.0"
-.
