--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ serde = "^1.0"
 serde_json = "^1.0"
 tempfile = "3.1.0"
 yup-oauth2 = "^1.0"
+clap = "2.33.1"
+slog = "2.5.2"
+lazy_static = "1.4.0"
