--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ serde_json = "^1.0"
 tempfile = "3.1.0"
 yup-oauth2 = "^1.0"
 clap = "2.33.1"
-slog = "2.5.2"
+slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] } 
 lazy_static = "1.4.0"
-md5 = "0.7.0"
+base64 = "0.12.3"
+slog-async = "2.5.0"
+slog-term = "2.6.0"
