--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ edition = "2018"
 name = "pi_drive_sync"
 version = "0.1.0"
 [dependencies]
-google-drive3 = "*"
+google-drive3 = "1.0.14"
 hyper = "^0.10"
 hyper-rustls = "^0.6"
 notify = "4.0.15"
@@ -19,3 +19,4 @@ base64 = "0.12.3"
 slog-async = "2.5.0"
 slog-term = "2.6.0"
 derive-new = "0.5.8"
+hyper-tls = "0.4.3"
